# workflow-failure-copilot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  workflow_monitor.py
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docs.yml  labeler.yml  lint.yml  monitor-failures.yml  monitor.yml  tests.yml
src/: main.py
src/workflow_monitor/: __init__.py  commit_manager.py  config.py  dashboard.py  error_analyzer.py  fix_generator.py  notification.py  workflow_monitor.py  workflow_retry.py
static/: style.css
templates/: dashboard.html
tests/: __init__.py  test_config.py  test_error_analyzer.py  test_fix_generator.py  test_notification.py  test_workflow_monitor.py
